# esp32-compiler-marvels-std-rs

./: Cargo.toml  README.md  run_esp32.sh  run_x86_64.sh  sdkconfig.defaults
.cargo/: config.toml
crates/microfft-rs/: CHANGELOG.md  Cargo.toml
crates/microfft-rs/bench/: Cargo.toml  README.md  run.py
crates/microfft-rs/bench/src/: main.rs
crates/microfft-rs/src/: inverse.rs  lib.rs
crates/microfft-rs/src/impls/: cfft.rs  ifft.rs  rfft.rs
crates/microfft-rs/tests/: transform.rs
src/: main.rs
