[package]
name = "esp32-compiler-marvels-std-rs"
version = "0.1.0"
authors = ["Jiri Jetmar <jiri@apache.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.69"

[profile.release]
opt-level = "s"
#opt-level = 3

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native", "target-esp32-none-elf", "esp-idf-sys", "esp-idf-hal", "esp-idf-svc", "embedded-svc"]
target-esp32-none-elf = []
target-native = ["fftw"]
pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false}
esp-idf-sys = { version = "0.33", default-features = false, optional = true }
esp-idf-hal = { version = "0.41", default-features = false, optional = true }
esp-idf-svc = { version = "0.46", default-features = false, optional = true }
embedded-svc = { version = "0.25", default-features = false, optional = true }

fftw = {version="0.8.0", optional = true}
#num-complex = "0.4.3"
num-traits = "0.2.15"
rustfft = "6"
realfft = "3"

[dependencies.microfft ]
version = "0.5.1"
default-features = true
features = ["std"]
path = "crates/microfft-rs"

[dependencies.num-complex]
version = "0.4.3"
default-features = false
features = ["std"]

[build-dependencies]
embuild = {version="0.31.2"}
